Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,11 +290,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 1 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.bar(values, counts/10000, align='center', alpha=0.9)\n",
     "plt.xticks(values)\n",
     "plt.ylabel('Fraction')\n",
