--- a/index.ipynb
+++ b/index.ipynb
@@ -305,7 +305,7 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "%matplotlib inline\n",
     "plt.bar(values, counts/10000, align='center', alpha=0.9)\n",
     "plt.xticks(values)\n",
     "plt.ylabel('Fraction')\n",
